tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/control/rawmulti-del.stderr
TOML parse error at line 1, column 23
  |
1 | rawmulti-del = '''null'''
  |                       ^
invalid multiline literal string
